
	* TAP_SCHEMA columns now has new column_index column.  Its addition should
	  be automatic as long as your TAP-published RDs are in order.

	* EPN-TAP 2.0 changed some column and parameter names, and the mixin
	  followed.  If you've already used EPN-TAP 2.0, you will have to re-import
	  your data and slightly adapt your RD (e.g., c1_min -> c1min, 
	  t_exp_min -> time_exp_min etc).


Version 0.9.7 (2016-08-18)

	* Behaviour change: pythonCores no longer run in a file system sandbox 
		(can't do that thread-safely).

	* Support for SIAP version 2 (see tutorial for details)

	* The default VOTable version delivered is now VOTable 1.3 (actually,
	  it's been 1.3 for a while now, we just didn't declare it)

	* support for Obscore 1.1 (update should be automatic)

	* support for EPN-TAP 2.0 (manually change to the #table-2.0 mixin)

	* Obscore support is now at version 1.1

	* DaCHS now supports CORS for web-based UIs

	* DaCHS's ADQL cross matches should now have "good" query plans 
	  regardless or argument order (but are half as  fast as in previous.
	  "good" cases).

	* SCS services publishing TAP-readable tables now get an auxiliary
	  TAP publication automatically (you'll need to re-gavo pub them,
	  though, if you want the Registry to notice quickly).

	* Removed bbox-based SIAP because DaCHS has been requiring pgsphere 
	  for quite a while now, and hence there's not need for a lousy fallback.

	* gavo admin xsdVal and XSD-validating regression tests now work
	  even with package installations; so: you got your own schema mirror now!

	* New gavo admin updateTAPSchema command for syncing TAP_SCHEMA with
	  the RDs.

	* New built-in preview-managing scheme for large data collections.

	* As usual, many small bug fixes and new features.


Version 0.9.6 (2016-03-16)

  * Several new indices are now created by default; you probably want them,
    too.  Run "gavo imp -I //products". Similarly, gavo imp -I <rd-id> on all